Removed padding from byteMonitor css to stop clipping

--- a/src/ui/widgets/ByteMonitor/byteMonitor.module.css
+++ b/src/ui/widgets/ByteMonitor/byteMonitor.module.css
@@ -5,5 +5,4 @@
 
 .ByteMonitor {
     overflow: hidden;
-    padding: 1px;
 }
